# unified-db-2

./: .gitignore  PAPER.md  README.md  main.py  pyproject.toml
scripts/: gen_readme_charts.py  run_all.py  run_bench.py  run_gpu_showcase.py
src/: config.py
src/analysis/: bandwidth_model.py  comparison.py  theoretical.py
src/bench/: memory.py  runner.py  transfer.py  validators.py
src/cpu/: duckdb_queries.py  numpy_queries.py
src/gpu/: primitives.py  query_q1.py  query_q12.py  query_q14.py  query_q3.py  query_q5.py  query_q6.py
src/viz/: charts.py
